--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.19.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.13",
     "react": "^18",
@@ -20,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "prisma": "^5.19.1",
     "typescript": "^5"
   }
 }
