--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "5.19.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.79.2"
+    "react-hook-form": "^7.53.0",
+    "sass": "^1.79.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.2",
